# docs/swagger/swagger.json
@@ -1788,7 +1788,7 @@
                 }
             }
         },
-        "/users/{userID}/suspension": {
+        "/users/{userUUID}/suspension": {
             "get": {
                 "security": [
                     {
@@ -1805,9 +1805,9 @@
                 "summary": "Get User Suspension",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userID",
+                        "type": "string",
+                        "description": "User UUID",
+                        "name": "userUUID",
                         "in": "path",
                         "required": true
                     }
@@ -1870,9 +1870,9 @@
                 "summary": "Suspend User",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userID",
+                        "type": "string",
+                        "description": "User UUID",
+                        "name": "userUUID",
                         "in": "path",
                         "required": true
                     },
@@ -1938,9 +1938,9 @@
                 "summary": "Unsuspend User",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userID",
+                        "type": "string",
+                        "description": "User UUID",
+                        "name": "userUUID",
                         "in": "path",
                         "required": true
                     }
@@ -2155,9 +2155,9 @@
                     "type": "string",
                     "example": "2026-03-15T10:00:00Z"
                 },
-                "user_id": {
-                    "type": "integer",
-                    "example": 1
+                "user_uuid": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
                 }
             }
         },
